--- a/NBA_shooting_data.ipynb
+++ b/NBA_shooting_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "mexican-constraint",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "[776 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +205,17 @@
     "|RANGE    |String    |Radius range of the shot taken from the basket in ft         |\n",
     "|DEFENDER |String    |Name of the player defending the shot                        |\n",
     "|SCORE    |String    |'MADE' if shot is scored, else 'MISSED'                      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46cee9ea",
+   "metadata": {},
+   "source": [
+    "## Basketball terms\n",
+    "### In this study, we will use a lot of basketball terms. Lets go over a few of them:\n",
+    "#### Shooting efficiency: percentage of made shots out of all taken shots\n",
+    "#### Field Goal Percentage"
    ]
   },
   {
@@ -773,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "73ada059-b0c7-4c6a-9634-de3efb27d1aa",
    "metadata": {},
    "outputs": [
@@ -835,7 +846,7 @@
        "3         Trae Young                   42"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0dce3757",
    "metadata": {},
    "outputs": [
@@ -917,7 +928,7 @@
        "3         Trae Young           73.08"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f733bcdb",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1161,7 @@
        "23         Trae Young  (25, 29)           78.57"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "892280ee",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1269,7 @@
        "11  Russell Westbrook  (25, 29)           24.32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4c5e27b3",
    "metadata": {
     "scrolled": true
@@ -1353,7 +1364,7 @@
        "23  Trae Young  (25, 29)           78.57"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,71 +1533,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DEFENDER</th>\n",
-       "      <th>SHOOTER</th>\n",
-       "      <th>opp_efficiency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Chris Paul</td>\n",
-       "      <td>Russell Westbrook</td>\n",
-       "      <td>25.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Russell Westbrook</td>\n",
-       "      <td>Chris Paul</td>\n",
-       "      <td>22.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Seth Curry</td>\n",
-       "      <td>Russell Westbrook</td>\n",
-       "      <td>13.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Trae Young</td>\n",
-       "      <td>Russell Westbrook</td>\n",
-       "      <td>54.84</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             DEFENDER            SHOOTER  opp_efficiency\n",
-       "0          Chris Paul  Russell Westbrook           25.81\n",
-       "3   Russell Westbrook         Chris Paul           22.37\n",
-       "7          Seth Curry  Russell Westbrook           13.64\n",
-       "10         Trae Young  Russell Westbrook           54.84"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-14-21d9f0568b82>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-21d9f0568b82>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    plt.plot(df_plot['']\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
