--- a/NBA_shooting_data.ipynb
+++ b/NBA_shooting_data.ipynb
@@ -1446,7 +1446,7 @@
     "    fg_pct = round(df.loc[(df['SHOOTER'] == player) & (df['SCORE'] == 'MADE')].shape[0] / df.loc[(df['SHOOTER'] == player)].shape[0] * 100, 2)\n",
     "    title = 'Shooting chart for ' + player + ' - Shots taken: ' + str(df.loc[(df['SHOOTER'] == player)].shape[0]) + ' - FG: ' + str(fg_pct) + '%'\n",
     "    ax[spot[i][0], spot[i][1]].set_title(title)\n",
-    "fig.savefig('test.png')\n",
+    "# fig.savefig('test.png')\n",
     "plt.show()"
    ]
   },
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5cba8fd",
+   "id": "0526b883",
    "metadata": {},
    "source": [
     "### These plots look beautiful and clean. Curry had an absurd 47% field goal percentage from behind the three point line. That is incredibly high efficiency for a three point shooter. On the other hand, Trae Young took even more shots from three than Curry, but had a 31% efficiency, which is a low percentage.\n",
@@ -1674,7 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b625ef4b",
+   "id": "84fc5479",
    "metadata": {},
    "outputs": [],
    "source": []
